samples/_failures_safe/1761717814_b0fecf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21626ffe.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_21626ffe.c:174:9: error: expected expression at end of input
  174 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_21626ffe.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_21626ffe.c:174:9: error: expected declaration or statement at end of input
